--- a/planner.html
+++ b/planner.html
@@ -4,6 +4,13 @@
     <title>Project</title>
     <link rel="stylesheet" href="style.css" />
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400&display=swap');
+        </style>
+    
 </head>
 <body>
 <a href="index.html"><h1>Home</h1></a>
